--- a/logHandle/src/jdbc.properties
+++ b/logHandle/src/jdbc.properties
@@ -1,4 +1,4 @@
 jdbcDriver=com.mysql.jdbc.Driver
-jdbcUrl=jdbc\:mysql\://localhost\:3306/homework
+jdbcUrl=jdbc:mysql\://localhost\:3306/mylogda
 jdbcUser=root
 jdbcPasswd=123456
