--- a/logHandle/.classpath
+++ b/logHandle/.classpath
@@ -3,5 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.5-bin.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.8.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.8.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/logHandle/lib/jsoup-1.8.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
